--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+#storybook-decorator {
+  font-family: var(--font-jetbrains-mono);
+}
